[gd_scene load_steps=9 format=3 uid="uid://dxjtliu6orn1i"]

[ext_resource type="Script" uid="uid://e4o825kw13g3" path="res://Scripts/pickupFunctionality.gd" id="1_yqxwx"]
[ext_resource type="PackedScene" uid="uid://njx823gyk04n" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_hand.tscn" id="2_8hnh3"]
[ext_resource type="Script" uid="uid://drv32jm7v0o84" path="res://Scripts/gunManager.gd" id="2_pahte"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="3_17cjv"]
[ext_resource type="PackedScene" uid="uid://b0bo8k24rrfxt" path="res://Scenes/pistolV3.tscn" id="3_r6twh"]
[ext_resource type="PackedScene" uid="uid://djqrr0wwxsepc" path="res://Scenes/gunMenu.tscn" id="4_r6twh"]
[ext_resource type="PackedScene" uid="uid://raeeicvvindd" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_hand.tscn" id="5_xedl8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_17cjv"]
margin = 0.01
size = Vector3(0.05, 0.05, 0.05)

[node name="playerTest" type="XROrigin3D"]

[node name="XRCamera3D" type="XRCamera3D" parent="."]

[node name="leftController" type="XRController3D" parent="."]
tracker = &"left_hand"
script = ExtResource("1_yqxwx")

[node name="LeftHand" parent="leftController" instance=ExtResource("2_8hnh3")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="FunctionPickup" parent="leftController" instance=ExtResource("3_17cjv")]

[node name="rightController" type="XRController3D" parent="." node_paths=PackedStringArray("gunMenu")]
tracker = &"right_hand"
script = ExtResource("2_pahte")
gunMenu = NodePath("../gunMenu")

[node name="pistolRotPos" type="Node3D" parent="rightController"]
transform = Transform3D(-1, 2.26267e-08, 8.44439e-08, 6.12418e-09, 0.981684, -0.190518, -8.7208e-08, -0.190518, -0.981684, 0, -0.011652, 0.0800168)

[node name="pistolV3" parent="rightController" node_paths=PackedStringArray("hand", "pistolRotPos") instance=ExtResource("3_r6twh")]
transform = Transform3D(-1, -1.15454e-08, -1.48356e-07, 1.6275e-08, 0.982519, -0.186164, 1.47912e-07, -0.186164, -0.982519, 0, -0.0213068, 0.103202)
gravity_scale = 0.0
hand = NodePath("..")
pistolRotPos = NodePath("../pistolRotPos")

[node name="RightHand" parent="rightController" instance=ExtResource("5_xedl8")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="handHitbox" type="Area3D" parent="rightController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0240202, 0.0809377)

[node name="handHitboxCollider" type="CollisionShape3D" parent="rightController/handHitbox"]
shape = SubResource("BoxShape3D_17cjv")

[node name="gunMenu" parent="." instance=ExtResource("4_r6twh")]
visible = false
